--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "db3838e9",
    "metadata": {},
    "outputs": [
@@ -240,22 +240,22 @@
    ],
    "source": [
     "print(\"Load a ply point cloud, print it, and render it\")\n",
-    "pcd = o3d.io.read_point_cloud(\"/home/coena98/olter/scene2/surface-L2-clean.ply\", format='ply')"
+    "pcd = o3d.io.read_point_cloud(\"/home/coena98/olter/scene1/surface-L2-clean-t40.ply\", format='ply')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f1aad1a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PointCloud with 23030 points."
+       "PointCloud with 25159 points."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,21 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e517640d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o3d.visualization.draw_geometries([pcd],\n",
-    "                                  zoom=0.3412,\n",
-    "                                  front=[0.4257, -0.2125, -0.8795],\n",
-    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
-    "                                  up=[-0.0694, -0.9768, 0.2024])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5161c577",
    "metadata": {
     "scrolled": true
@@ -291,29 +277,29 @@
      "output_type": "stream",
      "text": [
       "Testing mesh in Open3D...\n",
-      "TriangleMesh with 23030 points and 45162 triangles.\n",
+      "TriangleMesh with 22096 points and 43161 triangles.\n",
       "Vertices:\n",
-      "[[-6.55335903  0.6564672   4.71216297]\n",
-      " [-6.87553787  0.86996639  4.71216297]\n",
-      " [-6.78926754 -0.03819785  6.10149288]\n",
+      "[[-2.97793198  0.5292151   2.44831848]\n",
+      " [-2.97793198  0.53618902  2.44314551]\n",
+      " [-2.97793198  0.46721455  2.50298953]\n",
       " ...\n",
-      " [16.74307442  2.82827353 22.07878876]\n",
-      " [16.74221992  2.74046254 22.42612267]\n",
-      " [16.74307442  2.74078155 22.42612267]]\n",
+      " [ 7.02687263  1.02822852  7.7767415 ]\n",
+      " [ 6.97220135  1.08289969  7.75859642]\n",
+      " [ 7.03622532  1.08433127  7.75195122]]\n",
       "Triangles:\n",
-      "[[22981 22988 22987]\n",
-      " [19542 16876 19555]\n",
-      " [22988 22986 22987]\n",
+      "[[16263 16250 16251]\n",
+      " [17437 17432 17434]\n",
+      " [17437 17436 17432]\n",
       " ...\n",
-      " [13838 13840 13837]\n",
-      " [13837 13840 13839]\n",
-      " [13192 13193 13195]]\n"
+      " [19844 19842 19514]\n",
+      " [12083 12085 12068]\n",
+      " [12083 12068 12071]]\n"
      ]
     }
    ],
    "source": [
     "print(\"Testing mesh in Open3D...\")\n",
-    "mesh = o3d.io.read_triangle_mesh(\"/home/coena98/olter/scene2/surface-L2-clean.ply\")\n",
+    "mesh = o3d.io.read_triangle_mesh(\"/home/coena98/olter/scene1/surface-L2-clean-t40.ply\")\n",
     "\n",
     "print(mesh)\n",
     "print('Vertices:')\n",
@@ -333,13 +319,13 @@
      "output_type": "stream",
      "text": [
       "Computing normal and rendering it.\n",
-      "[[ 0.33025368 -0.66301614 -0.67181999]\n",
-      " [ 0.24893061 -0.86390384  0.43783981]\n",
-      " [ 0.27744935 -0.72972271 -0.6249213 ]\n",
+      "[[-0.01766419 -0.63558903 -0.77182548]\n",
+      " [ 0.34263948 -0.05936929 -0.93758918]\n",
+      " [ 0.36670865 -0.08685769 -0.92627237]\n",
       " ...\n",
-      " [ 0.40663128 -0.76917869 -0.49296567]\n",
-      " [ 0.39860651 -0.77913051 -0.48380626]\n",
-      " [ 0.75501754 -0.30278997 -0.58160704]]\n"
+      " [ 0.15028144 -0.33899784 -0.9287066 ]\n",
+      " [ 0.94408438  0.03142392  0.32820301]\n",
+      " [ 0.88382033  0.16130431  0.43913842]]\n"
      ]
     }
    ],
@@ -372,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "5284d571",
    "metadata": {},
    "outputs": [],
@@ -427,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "a2a60024",
    "metadata": {},
    "outputs": [
@@ -451,8 +437,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcheck_properties\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBoatMesh\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mmesh\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[9], line 22\u001b[0m, in \u001b[0;36mcheck_properties\u001b[0;34m(name, mesh)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m edge_manifold:\n\u001b[1;32m     21\u001b[0m     edges \u001b[38;5;241m=\u001b[39m mesh\u001b[38;5;241m.\u001b[39mget_non_manifold_edges(allow_boundary_edges\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 22\u001b[0m     geoms\u001b[38;5;241m.\u001b[39mappend(\u001b[43mo3dtut\u001b[49m\u001b[38;5;241m.\u001b[39medges_to_lineset(mesh, edges, (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)))\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m edge_manifold_boundary:\n\u001b[1;32m     24\u001b[0m     edges \u001b[38;5;241m=\u001b[39m mesh\u001b[38;5;241m.\u001b[39mget_non_manifold_edges(allow_boundary_edges\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcheck_properties\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBoatMesh\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mmesh\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[20], line 22\u001b[0m, in \u001b[0;36mcheck_properties\u001b[0;34m(name, mesh)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m edge_manifold:\n\u001b[1;32m     21\u001b[0m     edges \u001b[38;5;241m=\u001b[39m mesh\u001b[38;5;241m.\u001b[39mget_non_manifold_edges(allow_boundary_edges\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 22\u001b[0m     geoms\u001b[38;5;241m.\u001b[39mappend(\u001b[43mo3dtut\u001b[49m\u001b[38;5;241m.\u001b[39medges_to_lineset(mesh, edges, (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)))\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m edge_manifold_boundary:\n\u001b[1;32m     24\u001b[0m     edges \u001b[38;5;241m=\u001b[39m mesh\u001b[38;5;241m.\u001b[39mget_non_manifold_edges(allow_boundary_edges\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'o3dtut' is not defined"
      ]
     }
@@ -571,6 +557,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "e517640d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.visualization.draw_geometries([pcd],\n",
+    "                                  zoom=0.3412,\n",
+    "                                  front=[0.4257, -0.2125, -0.8795],\n",
+    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                  up=[-0.0694, -0.9768, 0.2024])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "697b1e46",
    "metadata": {},
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "9d4dc809",
    "metadata": {},
    "outputs": [
@@ -610,6 +610,17 @@
      "output_type": "stream",
      "text": [
       "Downsample the point cloud with a voxel of 0.02\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "draw_geometries(): incompatible function arguments. The following argument types are supported:\n    1. (geometry_list: List[open3d.cpu.pybind.geometry.Geometry], window_name: str = 'Open3D', width: int = 1920, height: int = 1080, left: int = 50, top: int = 50, point_show_normal: bool = False, mesh_show_wireframe: bool = False, mesh_show_back_face: bool = False) -> None\n    2. (geometry_list: List[open3d.cpu.pybind.geometry.Geometry], window_name: str = 'Open3D', width: int = 1920, height: int = 1080, left: int = 50, top: int = 50, point_show_normal: bool = False, mesh_show_wireframe: bool = False, mesh_show_back_face: bool = False, lookat: numpy.ndarray[numpy.float64[3, 1]], up: numpy.ndarray[numpy.float64[3, 1]], front: numpy.ndarray[numpy.float64[3, 1]], zoom: float) -> None\n\nInvoked with: [PointCloud with 21386 points.]; kwargs: zoom=0.3412, front=[0.4257, -0.2125, -0.8795], lookat=[2.6172, 2.0475, 1.532], up=[-0.0694, -0.9768, 0.2024], show_ui=True",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDownsample the point cloud with a voxel of 0.02\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m downpcd \u001b[38;5;241m=\u001b[39m pcd\u001b[38;5;241m.\u001b[39mvoxel_down_sample(voxel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.03\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mo3d\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisualization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw_geometries\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdownpcd\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                                  \u001b[49m\u001b[43mzoom\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.3412\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m                                  \u001b[49m\u001b[43mfront\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.4257\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m0.2125\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m0.8795\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m                                  \u001b[49m\u001b[43mlookat\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2.6172\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2.0475\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.532\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                                  \u001b[49m\u001b[43mup\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m0.0694\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m0.9768\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.2024\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshow_ui\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: draw_geometries(): incompatible function arguments. The following argument types are supported:\n    1. (geometry_list: List[open3d.cpu.pybind.geometry.Geometry], window_name: str = 'Open3D', width: int = 1920, height: int = 1080, left: int = 50, top: int = 50, point_show_normal: bool = False, mesh_show_wireframe: bool = False, mesh_show_back_face: bool = False) -> None\n    2. (geometry_list: List[open3d.cpu.pybind.geometry.Geometry], window_name: str = 'Open3D', width: int = 1920, height: int = 1080, left: int = 50, top: int = 50, point_show_normal: bool = False, mesh_show_wireframe: bool = False, mesh_show_back_face: bool = False, lookat: numpy.ndarray[numpy.float64[3, 1]], up: numpy.ndarray[numpy.float64[3, 1]], front: numpy.ndarray[numpy.float64[3, 1]], zoom: float) -> None\n\nInvoked with: [PointCloud with 21386 points.]; kwargs: zoom=0.3412, front=[0.4257, -0.2125, -0.8795], lookat=[2.6172, 2.0475, 1.532], up=[-0.0694, -0.9768, 0.2024], show_ui=True"
      ]
     }
    ],
